doc(*): リリースノートを更新

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-04-19  TOKYO SYSTEM HOUSE Co., Ltd. <opencobol@tsh-world.co.jp>
+
+	* Open Cobol ESQL (Ocesql) 1.2.0 released
+
+
 2015-03-31  TOKYO SYSTEM HOUSE Co., Ltd. <opencobol@tsh-world.co.jp>
 
 	* Open Cobol ESQL (Ocesql) 1.1.0 released
